--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,26 @@ h1 {
 #two-player-button:hover {
   background-color: #0D254B;
 }
+
+#info-div {
+  align-items: flex-start;
+  bottom: 10px;
+  display: flex;
+  flex-direction:column;
+  font-family: 'Bungee Inline', cursive;
+  font-size: 14px;
+  justify-content: center;
+  left: 10px;
+  position: absolute;
+
+}
+#links {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+#links a {
+  margin: 0 12px;
+}
