--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ label {
 #message-field {
   font-family: 'Bungee Inline', cursive;
   font-size: 30px;
-  margin-top: auto;
+  margin-bottom: auto;
 
 }
 
